# Patterns

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doc.md  Dockerfile  Dockerfile.gcc  README.md  docker-compose.yml  new_file.txt
App/: main.c
Cmake/: ConfigGuard.cmake  Doc.cmake  FetchCMocka.cmake  Warnings.cmake  ctags.cmake  gcc-toolchain.cmake  mingw-toolchain.cmake
Docs/: Doxyfile
Lib/: CMakeLists.txt
Lib/Event/: CMakeLists.txt  event.c  event.h  event_handler.c  event_table.c  event_table.h
Lib/Event_states/: CMakeLists.txt  digi.c  digi.h  main.c  state_start.c  state_start.h  state_stop.c  state_stop.h  watch_state.c  watch_state.h  watch_state_internal.h
Lib/Input/: CMakeLists.txt
Lib/Input/Test/: CMakeLists.txt  input_test.c
Lib/Obs/: CMakeLists.txt  client.c  client.h  data.h  main.c  subject.c  subject.h
Lib/Observer/: CMakeLists.txt  display_client.c  display_client.h  gas_data.c  gas_data.h  gas_notification_handle.c  gas_notification_handle.h  gas_sensor.c  gas_sensor.h  main.c
Lib/Observer_works/: CMakeLists.txt  display_client.c  gas_mixer_client.c  gas_sensor.c  main_app.c
Lib/Output/: CMakeLists.txt  output.c  output.h
Lib/Poly/: CMakeLists.txt  animal.c  animal.h  cat.c  cat.h  dog.c  dog.h
Lib/Poly_1/: CMakeLists.txt  animal.c  animal.h  dog.c  dog.h
Lib/RR/: queue.c  queue.h
Lib/Sensor/: sensor.c  sensor.h
Lib/Tasks/: task.c  task.h  task_adc.c  task_adc.h  task_led.c  task_led.h
Lib/Tasks/task/: CMakeLists.txt  init_state.c  init_state.h  main.c  post_run_state.c  post_run_state.h  process_state.c  process_state.h  run_state.c  run_state.h  stop_state.c  stop_state.h  task.c  task.h  task_state.c  task_state.h  task_state_internal.h
Scrible/: CMakeLists.txt  input.c  input.h  notes.c
Test/: CMakeLists.txt  tests.c
neki/: adt.c  adt.h  adt_drivers_proxy.c  adt_drivers_proxy.h  event.c  event.h  event_table.c  event_table.h  input.c  input.h  main.c  output.c  output.h  queue.h  task.c  task.h  task_adc.c  task_eeprom.c  task_eeprom.h  task_info.c  task_info.h  task_lcd.c  task_lcd.h  task_led.c  task_meas.c  task_meas.h  task_optic.c  task_optic.h  task_temper.c  task_temper.h
